--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,16 @@ layout: page
 
 <section class="aboutme">
     <div class="post_content">
+        <h1>
+            About Aakaori.
+        </h1>
         <p>
-            If you don't need 'about' page, edit the _config.yml to comment out the code.
+            Name: Park Mingyu
+            Birth: 09.30.2001
+            Sex : Male
+            Nationality : KR
             <br><br>
-            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg">
+            <a href="https://www.youtube.com/channel/UCHH9e7YCawe8Mm867In_KVA"><img src="https://starry99.github.io/catbook/assets/img/cat1.jpg"></a>
         </p>
     </div>
 </section>
