--- a/aboutme.html
+++ b/aboutme.html
@@ -9,11 +9,15 @@ layout: page
         </h1>
         <p>
             Name: Park Mingyu
+            <br>
             Birth: 09.30.2001
+            <br>
             Sex : Male
+            <br>
             Nationality : KR
+            <br>
             <br><br>
-            <a href="https://www.youtube.com/channel/UCHH9e7YCawe8Mm867In_KVA"><img src="https://starry99.github.io/catbook/assets/img/cat1.jpg"></a>
+            <a href="https://www.youtube.com/channel/UCHH9e7YCawe8Mm867In_KVA"><img src="https://github.com/mk2478/mk2478.github.com/blob/main/assets/img/youtube.png"></a>
         </p>
     </div>
 </section>
