--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@ layout: page
             Nationality : KR
             <br>
             <br><br>
-            <a href="https://www.youtube.com/channel/UCHH9e7YCawe8Mm867In_KVA"><img src="https://mk2478.github.io/assets/img/youtube.png"></a>
+            Email Address : mkp2478@gmail.com
         </p>
     </div>
 </section>
