--- a/aboutme.html
+++ b/aboutme.html
@@ -8,13 +8,15 @@ layout: page
             About Aakaori.
         </h1>
         <p>
-            Name: Park Mingyu
+            Name: Hyang_Dian
             <br>
             Birth: 09.30.2001
             <br>
             Sex : Male
             <br>
             Nationality : KR
+            <br>
+            Language : KR , JP
             <br>
             <br><br>
             Email Address : mkp2478@gmail.com
