--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@ layout: page
 <section class="aboutme">
     <div class="post_content">
         <h1>
-            About Aakaori.
+            About Hyang_Dian
         </h1>
         <p>
             Name: Hyang_Dian
