--- a/aboutme.html
+++ b/aboutme.html
@@ -5,10 +5,10 @@ layout: page
 <section class="aboutme">
     <div class="post_content">
         <h1>
-            About Hyang_Dian
+            About Dian
         </h1>
         <p>
-            Name: Hyang_Dian
+            Name: Dian
             <br>
             Birth: 09.30.2001
             <br>
